# Qt_Simple_Notes

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp
Data/: Note.h
Logic/: notecontroller.cpp  notecontroller.h
Models/: notemodel.cpp  notemodel.h
